Fix paragraph spacing

--- a/src/assets/styles/layouts/article.scss
+++ b/src/assets/styles/layouts/article.scss
@@ -149,7 +149,7 @@
     }
 
     &>*+* {
-      margin-block-end: var(--space-l);
+      margin-block-start: var(--space-l);
     }
 
     h2,
